--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8888
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
 spring:
   application:
     name: config-service
