--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,9 @@
 	</parent>
 	<groupId>config-service</groupId>
 	<artifactId>config-service</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.4-SNAPSHOT</version>
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>17</java.version>
 		<maven.javadoc.skip>true</maven.javadoc.skip>
 		<spring-cloud.dependency.version>2021.0.1</spring-cloud.dependency.version>
 		<activemq.version>5.15.10</activemq.version>
